# wasm-snake

./: .gitignore  Cargo.toml  README.md  file-save.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: constants.rs  game.rs  lib.rs  logic.rs  utils.rs
src/gui/: animation.rs  mod.rs  paint.rs  web.rs
src/model/: board.rs  data.rs  mod.rs  snake.rs
