[package]
name = "wasm-snake"
version = "0.1.0"
edition = "2021"
authors = ["Nikita S."]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'KeyboardEvent'
]